# JNITest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tocel/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: decoder.c  encoder.c  native-lib.cpp
app/src/main/java/com/tocel/jnitest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/tocel/jnitest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
